--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Indix
-  description: Simple role for setting up git ssh
+  description: Simple role ro set up git ssh 
   company: Indix
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -13,56 +13,59 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
- license: Apache-Version-2.0
- min_ansible_version: 1.9
- #
- # Below are all platforms currently available. Just uncomment
- # the ones that apply to your role. If you don't see your 
- # platform on this list, let us know and we'll get it added!
- #
- platforms:
- - name: Ubuntu
-   versions:
-   - all
-   - lucid
-   - maverick
-   - natty
-   - oneiric
-   - precise
-   - quantal
-   - raring
-   - saucy
-   - trusty
-   - utopic
-   - vivid
-   - wily
-   - xenial
+  license: Apache-Version-2.0
+  min_ansible_version: 1.9
+  #
+  # Below are all platforms currently available. Just uncomment
+  # the ones that apply to your role. If you don't see your 
+  # platform on this list, let us know and we'll get it added!
+  #
+  platforms:
+  - name: Ubuntu
+    versions:
+    - all
+    - lucid
+    - maverick
+    - natty
+    - oneiric
+    - precise
+    - quantal
+    - raring
+    - saucy
+    - trusty
+    - utopic
+    - vivid
+    - wily
+    - xenial
+
   galaxy_tags:
-   - development
-   - system
-   - web
-   - git
-   - ssh
- #
- # Below are all categories currently available. Just as with
- # the platforms above, uncomment those that apply to your role.
- #
- #categories:
- #- cloud
- #- cloud:ec2
- #- cloud:gce
- #- cloud:rax
- #- clustering
- #- database
- #- database:nosql
- #- database:sql
- #- development
- #- monitoring
- #- networking
- #- packaging
- #- system
- #- web
+    - development
+    - system
+    - web
+    - git
+    - ssh
+  #
+  # Below are all categories currently available. Just as with
+  # the platforms above, uncomment those that apply to your role.
+  #
+  #categories:
+  #- cloud
+  #- cloud:ec2
+  #- cloud:gce
+  #- cloud:rax
+  #- clustering
+  #- database
+  #- database:nosql
+  #- database:sql
+  #- development
+  #- monitoring
+  #- networking
+  #- packaging
+  #- system
+  #- web
 dependencies: []
- # List your role dependencies here, one per line.
- # Be sure to remove the '[]' above if you add dependencies
- # to this list.
+  # List your role dependencies here, one per line.
+  # Be sure to remove the '[]' above if you add dependencies
+  # to this list.
+  
+
