reading git_ssh_use_content as a variable
If it is not read as a variable, not expression will evaluate to false

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,7 +30,7 @@
     mode: "0600"
     owner: "{{git_ssh_owner}}"
     group: "{{git_ssh_group}}"
-  when: not(git_ssh_use_content)
+  when: not {{git_ssh_use_content}}
 
 - name: Upload git ssh private key via plain content
   copy:
